--- a/gradle.properties
+++ b/gradle.properties
@@ -1,50 +1,18 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx3G
+org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
+# Fabric Properties
+# check these on https://fabricmc.net/develop
+minecraft_version=1.21.8
+yarn_mappings=1.21.8+build.1
+loader_version=0.17.2
+loom_version=1.11-SNAPSHOT
+
 # Mod Properties
-mod_version=1.2.0
-maven_group=princ.brightaura
+mod_version=1.0.0
+maven_group=com.princ.brightnessaura
 archives_base_name=brightness-aura
 
-minecraft_version=1.21.5
-yarn_mappings=1.21.5+build.1
-loader_version=0.16.12
-
-# Fabric API
-fabric_version=0.119.6+1.21.5
-
-#minecraft_version=1.21.4
-#yarn_mappings=1.21.4+build.8
-#loader_version=0.16.12
-#
-## Fabric API
-#fabric_version=0.119.2+1.21.4
-
-#minecraft_version=1.21.3
-#yarn_mappings=1.21.3+build.2
-#loader_version=0.16.12
-#
-## Fabric API
-#fabric_version=0.114.0+1.21.3
-
-#minecraft_version=1.21.2
-#yarn_mappings=1.21.2+build.1
-#loader_version=0.16.12
-#
-## Fabric API
-#fabric_version=0.106.1+1.21.2
-
-#minecraft_version=1.21.1
-#yarn_mappings=1.21.1+build.3
-#loader_version=0.16.12
-#
-## Fabric API
-#fabric_version=0.115.4+1.21.1
-
-#minecraft_version=1.21
-#yarn_mappings=1.21+build.9
-#loader_version=0.16.12
-#
-## Fabric API
-#fabric_version=0.102.0+1.21
+# Dependencies
+fabric_version=0.133.4+1.21.8
